# app/Http/Controllers/Swagger/LectureController.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Http\Controllers\Swagger;
+
+use App\Http\Controllers\Controller;
+
+/**
+ * @OA\Get(
+ *     path="/api/lectures",
+ *     summary="Получение списка лекций",
+ *     tags={"Лекции"},
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="OK",
+ *         @OA\JsonContent(type="array", @OA\Items(
+ *              @OA\Property(property="id", type="integer"),
+ *              @OA\Property(property="topic", type="string"),
+ *              @OA\Property(property="description", type="string"),
+ *              ),
+ *              example={
+ *                  {
+ *                      "id": 1,
+ *                      "topic": "Введение в ООП",
+ *                      "description": "В этой лекции вы познакомитесь с объектно ориентированным программированием на PHP. Вы узнаете о классах, интерфейсах, инкапсуляции и магических методах. В итоге поймете, для чего нужны классы как абстракция данных. Знание основ объектно ориентированного программирования пригодится, чтобы понимать плюсы и минусы кода с классами и объектами. Также это поможет использовать объекты для реализации программной логики. Этот курс подойдет тем, кто уже хорошо знаком с языком PHP. Чтобы учиться было проще, стоит заранее изучить курсы: «Основы PHP», «PHP: Массивы», «PHP: Ассоциативные массивы» и «PHP: Функции».",
+ *                  },
+ *                  {
+ *                      "id": 2,
+ *                      "topic": "Объектно-ориентированный дизайн",
+ *                      "description": "В этой лекции вы познакомитесь с объектно ориентированным дизайном. Вы узнаете о паттернах, текучем интерфейсе и полезных популярных библиотеках. В итоге поймете, как правильно организовывать код, написанный на классах. Знания объектно ориентированного дизайна пригодятся, чтобы создавать и использовать цепочки функций, в том числе в неизменяемом стиле. Также они помогут правильно организовывать состояние объектов и проектировать безопасные сеттеры. Этот курс подойдет тем, кто уже хорошо знаком с языком PHP. Чтобы учиться было проще, стоит заранее изучить курсы: «Основы PHP», «PHP: Массивы», «PHP: Ассоциативные массивы» и «PHP: Функции».",
+ *                  },
+ *              }
+ *         ),
+ *     ),
+ * ),
+ */
+
+class LectureController extends Controller
+{
+
+}
